--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ body { background: var(--white); }
 
 .header.active .header-top {
   position: fixed;
-  background: var(--gunmetal);
+  background: rgba(255, 255, 255, 0.8); /* transparan */
 }
 
 .header-top .container {
@@ -730,7 +730,7 @@ body { background: var(--white); }
 /** Footer */
 
 .footer-top {
-  background: var(--gunmetal);
+  background: var(--black);
   padding-block: var(--section-padding);
   color: var(--gainsboro);
 }
@@ -807,7 +807,7 @@ address {
 
 .footer-bottom {
   --gunmetal: hsl(205, 36%, 17%);
-  background: var(--gunmetal);
+  background: var(--black);
   padding-block: 20px;
   text-align: center;
 }
@@ -955,25 +955,6 @@ address {
 
 
 
-  /**
-   * TOUR SEARCH
-   */
-
-  .tour-search-form {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: flex-end;
-    gap: 15px;
-  }
-
-  .tour-search-form .input-wrapper { margin-bottom: 0; }
-
-  .tour-search-form .input-field { padding: 16px 20px; }
-
-  .tour-search .btn {
-    grid-column: span 2;
-    margin-top: 20px;
-  }
 
 
 
@@ -1193,11 +1174,12 @@ address {
     top: 0;
     left: 0;
     width: 100%;
-    background: var(--white);
+    background: rgba(255, 255, 255, 0.8); /* transparan */
     color: var(--onyx);
     box-shadow: 0 2px 5px hsla(0, 0%, 0%, 0.08);
     transition: var(--transition);
   }
+
 
   .header-bottom .container { padding-block: 0; }
 
@@ -1220,7 +1202,7 @@ address {
     padding: 20px 15px;
   }
 
-  .header.active .navbar-link { color: var(--onyx); }
+  .header.active .navbar-link { color: var(--black); }
 
   .header.active .navbar-link:is(:hover, :focus) { color: var(--bright-navy-blue); }
 
