--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,13 +112,13 @@ body { background: var(--white); }
 }
 
 .btn-primary {
-  background: var(--bright-navy-blue);
-  border-color: var(--bright-navy-blue);
+  background: var(--black);
+  border-color: var(--black);
 }
 
 .btn-primary:is(:hover, :focus) {
-  background: var(--yale-blue);
-  border-color: var(--yale-blue);
+  background: var(--yale-black);
+  border-color: var(--yale-black);
 }
 
 .btn-secondary { border-color: var(--white); }
@@ -213,13 +213,24 @@ body { background: var(--white); }
 .helpline-box .wrapper { display: none; }
 
 .helpline-box .icon-box {
-  background: var(--bright-navy-blue);
+  background: var(--black);
   padding: 6px;
   border-radius: 50%;
   color: var(--white);
+  transition: background 0.25s ease, color 0.25s ease, border 0.25s ease; /* Transisi buat background, color, dan border */
+  border: 2px solid transparent; /* Awalnya border transparan */
 }
 
-.helpline-box .icon-box ion-icon { --ionicon-stroke-width: 40px; }
+.helpline-box .icon-box ion-icon { 
+  --ionicon-stroke-width: 40px; 
+}
+
+.helpline-box .icon-box:hover {
+  background: var(--yale-black); /* Warna background pas hover */
+  color: var(--white); /* Warna teks pas hover */
+  border: 2px solid var(--white); /* Border warna putih pas hover */
+}
+
 
 .header-top .logo { margin-inline: auto; }
 
@@ -230,7 +241,7 @@ body { background: var(--white); }
   display: flex;
   align-items: center;
   gap: 10px;
-  color: var(--white);
+  color: var(--black);
 }
 
 .search-btn,
@@ -495,7 +506,7 @@ body { background: var(--white); }
   bottom: 20px;
   left: 20px;
   right: 20px;
-  background: var(--white);
+  background: rgba(255, 255, 255, 0.6); /* Warna putih dengan transparency */
   border-radius: var(--radius-25);
   padding: 20px;
 }
@@ -855,7 +866,7 @@ address {
   right: 15px;
   width: 35px;
   height: 35px;
-  background: var(--bright-navy-blue);
+  background: var(--black);
   color: var(--white);
   display: grid;
   place-items: center;
