--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,13 +117,19 @@ body { background: var(--white); }
 }
 
 .btn-primary:is(:hover, :focus) {
-  background: var(--yale-black);
+  /* background: var(--yale-black); */
   border-color: var(--yale-black);
 }
 
-.btn-secondary { border-color: var(--white); }
+.btn-secondary {
+  background: var(--black); /* Tambahin background warna biar gak transparan */
+  border-color: var(--white);
+}
 
-.btn-secondary:is(:hover, :focus) { background: hsla(0, 0%, 100%, 0.1); }
+.btn-secondary:is(:hover, :focus) {
+  background: var(--black); /* Background warna putih pas hover */
+  color: var(--black); /* Warna teks hitam pas hover */
+}
 
 .h1,
 .h2,
@@ -226,7 +232,7 @@ body { background: var(--white); }
 }
 
 .helpline-box .icon-box:hover {
-  background: var(--yale-black); /* Warna background pas hover */
+  /* background: var(--yale-black); /* Warna background pas hover */
   color: var(--white); /* Warna teks pas hover */
   border: 2px solid var(--white); /* Border warna putih pas hover */
 }
